03 April 2008

* Support an extra space on the optional FLAGS response when fetching a mail,
  fixes problems with CommuniGate Pro, thanks to Anthony Wood.
* New flags, no-cram-md5 and no-login, on IMAP accounts to force fdm not to
  use cram-md5 or login authentication even if the server supports it. From
  Anthony Wood.

01 April 2008

* Support SIGUSR1 as an alias for SIGINFO, for platforms without SIGINFO.

06 March 2008

* Support multiple folders (folders { "a" "b" }) on IMAP fetching. Requested by
  Claudio Alessi.

05 March 2008

* Print current progress on SIGINFO. Be careful with this, it is possible
  there are places where an unhandled EINTR would cause fdm to die.

04 March 2008

* fdm 1.5 released.

10 February 2008

* Consistently use geteuid().
* Correct mail_month/mail_dayofyear tags.

10 January 2008

* Added "from" to smtp action to specify envelope from. Requested by Marco
  Lopes.

07 January 2008

* Use <>s around envelope addresses when using SMTP. Reported by Marco Lopes.

08 December 2007

* Don't let mbox or maildir fetch code exit and free stuff until all the mail is
  dealt with (queues are empty). Fixes mbox fetching problems reported by
  akarinotengoku at gmail.com.

03 December 2007

* Bug fix: restore non-blocking mode properly after constructing SSL
  connection. This bug prevented SSL over a proxy working.

06 November 2007

* Use +FLAGS.SILENT instead of +FLAGS to mark IMAP mail as deleted, as we
  don't need the new flags.

03 November 2007

* Exchange sometimes includes a FLAGS update as part of its FETCH response,
  which made fdm complain. Change to accept it without error. Reported by
  Leo D'Angelo.
* Google IMAP has problems with naked flag lists on STORE commands (which are
  valid). Change to enclose the flags list in brackets. Reported by Andrew
  Pantyukhin.

25 October 2007

* New option, no-create, prevents fdm creating missing path components or files
  when delivering to maildirs or mboxes.