@@ -1,3 +1,7 @@
+22 May 2008
+
+* deliver-imap fetch method; suggested by Jason Dixon a while ago.
+
 03 April 2008
 
 * Support an extra space on the optional FLAGS response when fetching a mail,
@@ -819,4 +823,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.191 2008-04-03 18:49:22 nicm Exp $
+$Id: CHANGES,v 1.192 2008-05-22 21:18:03 nicm Exp $
